--- a/Getting_started/intro_data_analysis.ipynb
+++ b/Getting_started/intro_data_analysis.ipynb
@@ -9,6 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import random\n",
     "\n",
     "CARD = [\"heart\", \"club\", \"spade\", \"diamond\"]\n",
     "COLOR_CARD = [\"red\", \"black\"]"
@@ -22,6 +23,15 @@
    "source": [
     "data = pd.read_csv(r\"file_path\")\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(\"\", inplace=True)"
    ]
   },
   {
@@ -48,6 +58,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Analyze data and compute necessary values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -57,9 +92,21 @@
     "\tfor i in range(len(card)):\n",
     "\t\tdf_team = df[df[card_col] == card[i]]\n",
     "\t\tav_hour = df_team.mean()\n",
+    "\t\tmin_hour = df_team.min()\n",
+    "\t\tmax_hour = df_team.max()\n",
     "\t\tprint(f\"The average hours of sleep for team {card[i]} is {av_hour}\")\n",
+    "\t\tprint(f\"The minimum hours of sleep for team {card[i]} is {min_hour}\")\n",
+    "\t\tprint(f\"The maximum hours of sleep for team {card[i]} is {max_hour}\")\n",
+    "\t\tprint()\n",
     "\n",
     "av_sleep_hour(data, COLOR_CARD, \"sleep_hour\", \"card_col\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Visualize data"
    ]
   },
   {
@@ -68,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def "
+    "def visualize_fav_season(df: pd.DataFrame, card: list, sleep_hour_col: str, card_col: str):"
    ]
   }
  ],
