--- a/Getting_started/intro_data_analysis.ipynb
+++ b/Getting_started/intro_data_analysis.ipynb
@@ -52,7 +52,7 @@
     "\t\t\t\t\t 9: \"fav_past_time\", \n",
     "\t\t\t\t\t 10: \"sleep_hour\",\n",
     "\t\t\t\t\t 11: \"roadtrip_vs_vacation\", \n",
-    "\t\t\t\t\t 12: \"times_asleep\",})\n",
+    "\t\t\t\t\t 12: \"times_asleep_inclass\",})\n",
     "\n",
     "data"
    ]
@@ -88,18 +88,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def av_sleep_hour(df: pd.DataFrame, card: list, sleep_hour_col: str, card_col: str):\n",
+    "def compute_vals(df: pd.DataFrame, card: list, target_col: str, card_col: str):\n",
     "\tfor i in range(len(card)):\n",
     "\t\tdf_team = df[df[card_col] == card[i]]\n",
-    "\t\tav_hour = df_team.mean()\n",
-    "\t\tmin_hour = df_team.min()\n",
-    "\t\tmax_hour = df_team.max()\n",
+    "\t\tav_hour = df_team[target_col].mean()\n",
+    "\t\tmin_hour = df_team[target_col].min()\n",
+    "\t\tmax_hour = df_team[target_col].max()\n",
     "\t\tprint(f\"The average hours of sleep for team {card[i]} is {av_hour}\")\n",
     "\t\tprint(f\"The minimum hours of sleep for team {card[i]} is {min_hour}\")\n",
     "\t\tprint(f\"The maximum hours of sleep for team {card[i]} is {max_hour}\")\n",
     "\t\tprint()\n",
     "\n",
-    "av_sleep_hour(data, COLOR_CARD, \"sleep_hour\", \"card_col\")"
+    "compute_vals(data, COLOR_CARD, \"sleep_hour\", \"card_col\")\n",
+    "compute_vals(data, CARD, \"times_asleep_inclass\", \"card_col\")"
    ]
   },
   {
@@ -110,12 +111,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Bar chart on favorite seasons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def visualize_fav_season(df: pd.DataFrame, card: list, sleep_hour_col: str, card_col: str):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Percentage pie chart on biggest college fears"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Make predictions"
    ]
   }
  ],
