--- a/Getting_started/intro_data_analysis.ipynb
+++ b/Getting_started/intro_data_analysis.ipynb
@@ -9,10 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from test_notebook import compute_vals, visualize_fav_season\n",
-    "\n",
-    "CARD = [\"heart\", \"club\", \"spade\", \"diamond\"]\n",
-    "COLOR_CARD = [\"red\", \"black\"]"
+    "from test_notebook import compute_vals, visualize_fav_season, visualize_big_fear"
    ]
   },
   {
@@ -704,17 +701,6 @@
     }
    ],
    "source": [
-    "def compute_vals(df: pd.DataFrame, card: list, target_col: str, team_col: str):\n",
-    "\tfor i in range(len(card)):\n",
-    "\t\tdf_team = df[df[team_col] == card[i]]\n",
-    "\t\tav_hour = df_team[target_col].mean()\n",
-    "\t\tmin_hour = df_team[target_col].min()\n",
-    "\t\tmax_hour = df_team[target_col].max()\n",
-    "\t\tprint(f\"The average hours of sleep for team {card[i]} is {av_hour}\")\n",
-    "\t\tprint(f\"The minimum hours of sleep for team {card[i]} is {min_hour}\")\n",
-    "\t\tprint(f\"The maximum hours of sleep for team {card[i]} is {max_hour}\")\n",
-    "\t\tprint()\n",
-    "\n",
     "card_list = list(data[\"card_team\"].unique())\n",
     "compute_vals(data, card_list, \"sleep_hour\", \"card_team\")"
    ]
@@ -750,35 +736,6 @@
     }
    ],
    "source": [
-    "def visualize_fav_season(df: pd.DataFrame, card: list, target_col: str, team_col: str, \n",
-    "                         nrow: int = 1, ncol: int = 2):\n",
-    "    # Define all possible seasons\n",
-    "    all_seasons = ['Spring', 'Summer', 'Fall', 'Winter']\n",
-    "    \n",
-    "    _, axes = plt.subplots(nrow, ncol, figsize=(16, 12), sharex=True)\n",
-    "    axes = axes.flatten()\n",
-    "    \n",
-    "    for i, team in enumerate(card):\n",
-    "        team_df = df[df[team_col] == team]\n",
-    "        \n",
-    "        # Get the counts of each season, ensuring all seasons are represented\n",
-    "        season_counts = team_df[target_col].value_counts().reindex(all_seasons, fill_value=0)\n",
-    "        x_axis = season_counts.index.tolist()  # Fixed set of seasons\n",
-    "        y_axis = season_counts.values.tolist()  # Corresponding counts\n",
-    "        bar_colors = ['red', 'pink', 'coral', 'orange']\n",
-    "        \n",
-    "        # Create bar plot\n",
-    "        bars = axes[i].bar(x_axis, y_axis, color=bar_colors)\n",
-    "        axes[i].set_ylabel('Number of students')\n",
-    "        axes[i].set_title(f\"Favorite seasons in team {team}\")\n",
-    "        \n",
-    "        # Set legend using x_axis as labels\n",
-    "        axes[i].legend(bars, x_axis, title='Favorite seasons')\n",
-    "\n",
-    "    plt.suptitle(\"Favorite seasons in each team\", fontsize=20)\n",
-    "    plt.tight_layout(rect=[0, 0, 1, 0.96])  # Adjust layout to fit title\n",
-    "    plt.show()\n",
-    "\n",
     "# Example usage\n",
     "visualize_fav_season(data, card_list, \"fav_season\", \"card_team\", 2, 2)\n"
    ]
@@ -807,22 +764,6 @@
     }
    ],
    "source": [
-    "def visualize_big_fear(df: pd.DataFrame, card: list, target_col: str, \n",
-    "\t\t\t\t\t\t nrow: int = 1, ncol: int = 2):\n",
-    "\t\n",
-    "\t_, axes = plt.subplots(nrow, ncol, figsize=(16, 12), sharex=True)\n",
-    "\taxes = axes.flatten()  # Flatten in case axes is a 2D array for easy iteration\n",
-    "\n",
-    "\tfor i, team in enumerate(card):     # team: heart\n",
-    "\t\tteam_df = df[df[\"card_team\"] == team]\n",
-    "\t\tlabels = list(dict(team_df[target_col].value_counts()).keys())\n",
-    "\t\tx = list(dict(team_df[target_col].value_counts()).values())\n",
-    "\t\taxes[i].pie(x, labels=labels, autopct='%1.1f%%')\n",
-    "\t\taxes[i].set_title(f\"Fear proportion in team {team}\")\n",
-    "\n",
-    "\tplt.title(\"Illustration of college fear at today's event\")\n",
-    "\tplt.show()\n",
-    "\n",
     "visualize_big_fear(data, card_list, \"big_college_fear\", 2, 2)"
    ]
   },
